convert AI stuff to using deferred registers